--- a/config/scenario/daydream_dialogue.yaml
+++ b/config/scenario/daydream_dialogue.yaml
@@ -23,16 +23,6 @@ context:
   location: ''
   thoughts: []
 
-seed:
-  - action: load_conversation
-    target: current
-    exclude_types: [ner]
-  - action: get_memory
-    top_n: 4
-  - action: sort
-    by: timestamp
-    direction: ascending
-
 steps:
   # === DREAMER: ENTERING REVERIE ===
   dreamer_intro:
@@ -51,12 +41,19 @@ steps:
       Begin with "[== {{ dreamer.name }}'s Emotional State: <list of +Emotions+> ==]"
     config:
       max_tokens: 2048
+      use_guidance: true
     output:
       document_type: dialogue-dreamer
       weight: 0.4
     context:
-      - action: search_memories
+      - action: load_conversation
+        target: current
+        document_types: [summary, conversation, mud-world, mud-agent]
+      - action: get_memory
         top_n: 4
+      - action: sort
+        by: timestamp
+        direction: ascending
     next: [intro_response]
 
   intro_response:
@@ -92,6 +89,7 @@ steps:
       Begin with "[== {{ dreamer.name }}'s Emotional State: <list of +Emotions+> ==]"
     config:
       max_tokens: 4096
+      use_guidance: true
     output:
       document_type: dialogue-dreamer
       weight: 0.4
@@ -133,6 +131,7 @@ steps:
       Begin with "[== {{ dreamer.name }}'s Emotional State: <list of +Emotions+> ==]"
     config:
       max_tokens: 4096
+      use_guidance: true
     output:
       document_type: dialogue-dreamer
       weight: 0.4
@@ -173,6 +172,7 @@ steps:
       Begin with "[== {{ dreamer.name }}'s Emotional State: <list of +Emotions+> ==]"
     config:
       max_tokens: 4096
+      use_guidance: true
     output:
       document_type: dialogue-dreamer
       weight: 0.4
@@ -218,6 +218,7 @@ steps:
       Begin with "[== {{ revelator.name }}'s Emotional State: <list of +Emotions+> ==]"
     config:
       max_tokens: 2048
+      use_guidance: true
     output:
       document_type: dialogue-revelator
       weight: 0.4
@@ -260,6 +261,7 @@ steps:
       Begin with "[== {{ dreamer.name }}'s Emotional State: <list of +Emotions+> ==]"
     config:
       max_tokens: 4096
+      use_guidance: true
     output:
       document_type: dialogue-dreamer
       weight: 0.4
@@ -306,6 +308,7 @@ steps:
       For "[== Epilogue: <evocative title> ==]"
     config:
       max_tokens: 4096
+      use_guidance: true
     output:
       document_type: dialogue-writer
       weight: 0.4
@@ -329,6 +332,7 @@ steps:
         top_n: 4
     config:
       max_tokens: 4096
+      model_role: writing
     output:
       document_type: inspiration
       weight: 1.0
@@ -355,6 +359,8 @@ steps:
     config:
       max_tokens: 4096
       is_codex: true
+      model_role: codex
+      use_guidance: true
     output:
       document_type: codex
       weight: 1.0
@@ -373,10 +379,13 @@ steps:
       What connections do you see? What wants to be remembered?
       Begin with "[== {{ persona.name }}'s Emotional State: <list of +Emotions+> ==]"
     context:
+      - action: flush
       - action: search_memories
-        top_n: 10
+        exclude_types: [ner, codex, brainstorm]
+        top_n: 20
     config:
       max_tokens: 4096
+      model_role: codex
     output:
       document_type: step
       weight: 0.3
@@ -396,6 +405,7 @@ steps:
       Begin with "[== {{ librarian.name }}'s Emotional State: <list of +Emotions+> ==]"
     config:
       max_tokens: 4096
+      use_guidance: true
     output:
       document_type: dialogue-librarian
       weight: 0.2
@@ -414,10 +424,11 @@ steps:
       For "Brainstorming:"
     context:
       - action: search_memories
+        document_types: [brainstorm]
         top_n: 10
     config:
       max_tokens: 4096
-      is_thought: true
+      model_role: research
     output:
       document_type: brainstorm
       weight: 0.6
